About Page done

--- a/contact.html
+++ b/contact.html
@@ -3,23 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Company</title>
+    <title> AMO O. G. PROPERTY SERVICES</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
+
 <header>
-    <nav>
-        <div class="logo">My Company</div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="index.html" id="navbar__logo">AMO O. G. Property Services</a>
+            <!--<h2>AMO O G Property Services</h2>-->
+            <div class="navbar__toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="index.html" class="navbar__links" id="home-page">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="about.html" class="navbar__links" id="about-page">About</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="services.html" class="navbar__links" id="services-page">Services</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
+                </li>
+                <!--<li class="navbar__btn">
+                    <a href="/sign-up" class="button" id="signup">Sign Up</a>
+                </li>-->
+            </ul>
+        </div>
     </nav>
 </header>
 
+
 <body>
+
+
 
 </body>
 
