Set up Gitlab Pages

--- a/about.html
+++ b/about.html
@@ -55,10 +55,10 @@
 <div class="Our__Partners">
     <h2>Our Partners</h2>
     <div class="partners">
-        <img src="/assets/images/SASL_website.jpg" alt="Sinapi Aba Savings & Loans">
+        <img src="./assets/images/SASL_website.jpg" alt="Sinapi Aba Savings & Loans">
         <div class="landscape-logos">
-            <img src="/assets/images/Newmont Ghana.jpg" alt="Newmont Ghana">
-            <img src="/assets/images/CBG-Logo.jpg" alt="Consolidated Bank Ghana">
+            <img src="./assets/images/Newmont Ghana.jpg" alt="Newmont Ghana">
+            <img src="./assets/images/CBG-Logo.jpg" alt="Consolidated Bank Ghana">
         </div>
     </div>
 </div>
