--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 </head>
 
 <header>
-
     <nav class="navbar">
         <div class="navbar__container">
             <a href="index.html" id="navbar__logo">AMO O. G. Property Services</a>
@@ -25,9 +24,9 @@
                 <li class="navbar__item">
                     <a href="about.html" class="navbar__links" id="about-page">About</a>
                 </li>
-                <li class="navbar__item">
-                    <a href="services.html" class="navbar__links" id="services-page">Services</a>
-                </li>
+                <!-- <li class="navbar__item">
+                     <a href="services.html" class="navbar__links" id="services-page">Services</a>
+                 </li>-->
                 <li class="navbar__item">
                     <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
                 </li>
@@ -36,9 +35,7 @@
                 </li>-->
             </ul>
         </div>
-
     </nav>
-
 </header>
 <body>
 <div class="container">
