--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-
 <header>
     <nav class="navbar">
         <div class="navbar__container">
             <a href="index.html" id="navbar__logo">AMO O. G. Property Services</a>
-            <!--<h2>AMO O G Property Services</h2>-->
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -26,26 +24,33 @@
                     <a href="about.html" class="navbar__links" id="about-page">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="services.html" class="navbar__links" id="services-page">Services</a>
-                </li>
-                <li class="navbar__item">
                     <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
                 </li>
-                <!--<li class="navbar__btn">
-                    <a href="/sign-up" class="button" id="signup">Sign Up</a>
-                </li>-->
             </ul>
         </div>
     </nav>
 </header>
 
-
 <body>
 
+<body>
+<div class="wrapper">
+    <main>
+        <!-- Your page content here -->
+        <section style="text-align: center; padding: 40px 20px;">
+            <h2 style="color: #FFD700;">Contact Us</h2>
+            <p style="font-size: 1.2rem;">P.O. Box 293, Sunyani</p>
+            <p style="font-size: 1.2rem;">Phone: +233 249 394 713 / +233 50 658 46</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 AMO O. G. Property Services. All rights reserved.</p>
+    </footer>
+</div>
+</body>
 
 
 </body>
 
-<footer>
-    <p>&copy; 2025 AMO O. G. Property Services. All rights reserved.</p>
-</footer>
+
