--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <li class="navbar__item">
                     <a href="about.html" class="navbar__links" id="about-page">About</a>
                 </li>
-                <li class="navbar__item">
+               <!-- <li class="navbar__item">
                     <a href="services.html" class="navbar__links" id="services-page">Services</a>
-                </li>
+                </li>-->
                 <li class="navbar__item">
                     <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
                 </li>
@@ -49,11 +49,10 @@
     <div class="hero-section">
        <!-- <div class="overlay"></div>-->
         <div class="content">
-            <h1>Welcome to Amo O. G. Property Services For Good ......</h1>
-            <p>We help you find .....</p>
+            <h1>Welcome to Amo O. G. Property Services</h1>
             <div class="buttons">
                 <a href="about.html" class="btn btn-primary">WHO WE ARE</a>
-                <a href="services.html" class="btn btn-outline">OUR SERVICES</a>
+                <a href="contact.html" class="btn btn-outline">OUR CONTACT</a>
             </div>
         </div>
     </div>
