--- a/index.html
+++ b/index.html
@@ -13,41 +13,36 @@
         <div class="navbar__container">
             <a href="index.html" id="navbar__logo">AMO O. G. Property Services</a>
             <!--<h2>AMO O G Property Services</h2>-->
-            <div class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar__menu">
-                <li class="navbar__item">
-                    <a href="index.html" class="navbar__links" id="home-page">Home</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="about.html" class="navbar__links" id="about-page">About</a>
-                </li>
-               <!-- <li class="navbar__item">
-                    <a href="services.html" class="navbar__links" id="services-page">Services</a>
-                </li>-->
-                <li class="navbar__item">
-                    <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
-                </li>
-                <!--<li class="navbar__btn">
-                    <a href="/sign-up" class="button" id="signup">Sign Up</a>
-                </li>-->
-            </ul>
-        </div>
-    </nav>
+            <!--<div class="navbar__toggle" id="mobile-menu">
+               <span class="bar"></span>
+               <span class="bar"></span>
+               <span class="bar"></span>
+           </div>-->
+           <ul class="navbar__menu">
+               <li class="navbar__item">
+                   <a href="index.html" class="navbar__links" id="home-page">Home</a>
+               </li>
+               <li class="navbar__item">
+                   <a href="about.html" class="navbar__links" id="about-page">About</a>
+               </li>
+               <li class="navbar__item">
+                   <a href="contact.html" class="navbar__links" id="contact-page">Contact</a>
+               </li>
+
+           </ul>
+       </div>
+   </nav>
 </header>
 
 
 
 <section class= "background purple">
-    <div >
-        <a href="assets/images/royalPurple.webp"></a>
-    </div>
+   <div >
+       <a href="assets/images/royalPurple.webp"></a>
+   </div>
 
-    <div class="hero-section">
-       <!-- <div class="overlay"></div>-->
+   <div class="hero-section">
+      <!-- <div class="overlay"></div>-->
         <div class="content">
             <h1>Welcome to Amo O. G. Property Services</h1>
             <div class="buttons">
@@ -62,35 +57,6 @@
 
 
 
-<!--<section class="hero">
-
-    <p>We provide excellent services to help your business grow.</p>
-</section>
--->
-
-<!--
-<section class="services">
-    <h2>Our Services</h2>
-    <div class="service-list">
-        <div class="service-item">Web Development</div>
-        <div class="service-item">SEO Optimization</div>
-        <div class="service-item">Business Consulting</div>
-    </div>
-</section>
-
-
-
-<section class="contact">
-    <h2>Contact Us</h2>
-    <form id="contact-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <textarea placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-    </form>
-</section>
-
--->
 
 <footer>
     <p>&copy; 2025 AMO O. G. Property Services. All rights reserved. </p>
